--- a/demo_theme.html
+++ b/demo_theme.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--[if lte IE 6]><html lang="en-us" class="ie6"><![endif]-->
+<!--[if IE 7]><html lang="en-us" class="ie7"><![endif]-->
+<!--[if IE 8]><html lang="en-us" class="ie8"><![endif]-->
+<!--[if IE 9]><html lang="en-us" class="ie9"><![endif]-->
+<!--[if gt IE 9]><!--><html lang="en-us"><!--<![endif]-->
     <head>
         <title>Navigation Accordion</title>
         <meta charset="utf-8" />
