Fix broking link to javascript file (Fixes #11)

--- a/demo.html
+++ b/demo.html
@@ -60,6 +60,6 @@
             </ul>
         </div>
         
-        <p id="description">View the source code of this document and <a href="./accordion-dev.js">the corresponding JS file</a> for lots of inline documentation. To summarize, each accordion menu should be a &lt;ul&gt; contained within a parent that has the class "jsAccordion".  By default, all panels (containing sub-links) will be hidden, but each page can control which panels are open by default.</p>
+        <p id="description">View the source code of this document and <a href="./accordion.js">the corresponding JS file</a> for lots of inline documentation. To summarize, each accordion menu should be a &lt;ul&gt; contained within a parent that has the class "jsAccordion".  By default, all panels (containing sub-links) will be hidden, but each page can control which panels are open by default.</p>
     </body>
 </html>
