Add a folder for Javascript files

--- a/demo_theme.html
+++ b/demo_theme.html
@@ -22,7 +22,7 @@
             #footer {margin-top: 20px;}
         </style>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script type="text/javascript" src="./accordion.js"></script>
+        <script type="text/javascript" src="./scripts/accordion.js"></script>
         <script type="text/javascript">
             visiblePanels = [0, 'sub-grains', 'third-block'];
         </script>
