--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
             #nav {float: left; margin-right: 30px; width: 175px;}
         </style>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <script type="text/javascript" src="./accordion.js"></script>
+        <script type="text/javascript" src="./scripts/accordion.js"></script>
         <script type="text/javascript">
             // There are several ways to specify which panels are open when the page loads
             // visiblePanels = '-all'; // a value of '-all' makes all accordion panels visible
