User Modernizr instead of IE comments (Fixes #16)

--- a/demo.html
+++ b/demo.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--[if lte IE 6]><html lang="en-us" class="ie6"><![endif]-->
-<!--[if IE 7]><html lang="en-us" class="ie7"><![endif]-->
-<!--[if IE 8]><html lang="en-us" class="ie8"><![endif]-->
-<!--[if IE 9]><html lang="en-us" class="ie9"><![endif]-->
-<!--[if gt IE 9]><!--><html lang="en-us"><!--<![endif]-->
+<html lang="en-us">
     <head>
         <title>Navigation Accordion</title>
         <meta charset="utf-8" />
@@ -15,6 +11,7 @@
             /* The accordion defaults to the width of its parent unless excplicitely set. */
             #nav {float: left; margin-right: 30px; width: 175px;}
         </style>
+        <script type="text/javascript" src="./scripts/modernizr.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="./scripts/accordion.js"></script>
         <script type="text/javascript">
