--- a/demo_theme.html
+++ b/demo_theme.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--[if lte IE 6]><html lang="en-us" class="ie6"><![endif]-->
-<!--[if IE 7]><html lang="en-us" class="ie7"><![endif]-->
-<!--[if IE 8]><html lang="en-us" class="ie8"><![endif]-->
-<!--[if IE 9]><html lang="en-us" class="ie9"><![endif]-->
-<!--[if gt IE 9]><!--><html lang="en-us"><!--<![endif]-->
+<html lang="en-us">
     <head>
         <title>Navigation Accordion</title>
         <meta charset="utf-8" />
@@ -21,6 +17,7 @@
             #main {margin-left: 200px;}
             #footer {margin-top: 20px;}
         </style>
+        <script type="text/javascript" src="./scripts/modernizr.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="./scripts/accordion.js"></script>
         <script type="text/javascript">
