Add a compatibility layer for legacy accordions (see #22)

--- a/demo.html
+++ b/demo.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="./scripts/modernizr.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="./scripts/accordion.js"></script>
+        <script type="text/javascript" src="./scripts/legacy.js"></script>
         <script type="text/javascript">
             // There are several ways to specify which panels are open when the page loads
             // visiblePanels = '-all'; // a value of '-all' makes all accordion panels visible
