--- a/demo_theme.html
+++ b/demo_theme.html
@@ -20,6 +20,7 @@
         <script type="text/javascript" src="./scripts/modernizr.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="./scripts/accordion.js"></script>
+        <script type="text/javascript" src="./scripts/legacy.js"></script>
         <script type="text/javascript">
             visiblePanels = [0, 'sub-grains', 'third-block'];
         </script>
