Move styles into css directory

--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
         <title>Navigation Accordion</title>
         <meta charset="utf-8" />
 
-        <link rel="stylesheet" type="text/css" href="./accordion.css" />
+        <link rel="stylesheet" type="text/css" href="./css/accordion.css" />
         <style type="text/css">
             /* The accordion defaults to the width of its parent unless excplicitely set. */
             #nav {float: left; margin-right: 30px; width: 175px;}
