--- a/demo_theme.html
+++ b/demo_theme.html
@@ -4,11 +4,11 @@
         <title>Navigation Accordion</title>
         <meta charset="utf-8" />
 
-        <link rel="stylesheet" type="text/css" href="./accordion.css" />
+        <link rel="stylesheet" type="text/css" href="./css/accordion.css" />
         
         <!-- these optional stylesheets provide additional themes -->
-        <link rel="stylesheet" type="text/css" href="./themes/tan.css" />
-        <link rel="stylesheet" type="text/css" href="./themes/green.css" />
+        <link rel="stylesheet" type="text/css" href="./css/themes/tan.css" />
+        <link rel="stylesheet" type="text/css" href="./css/themes/green.css" />
         <!-- end of accordion themes -->
         
         <style type="text/css">
