Assume secondary-nav class is a ul, not an arbitrary parent

--- a/demo_theme.html
+++ b/demo_theme.html
@@ -58,8 +58,8 @@
                     </li>
                 </ul>
             </div>
-            <div id="main" class="jsAccordion tan">
-                <ul>
+            <div id="main" class="jsAccordion">
+                <ul class="tan">
                     <li><span>Section Heading</span>
                         <div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat justo nulla, et cursus urna. Morbi elit nisl, sodales a dignissim in, eleifend pretium ligula. Maecenas aliquet tortor vel orci faucibus posuere. Etiam dictum, turpis nec ultrices ullamcorper, massa nisl consequat lacus, ac blandit justo felis ac felis. Nulla vulputate imperdiet facilisis. Ut vel sodales mauris.</p>
@@ -81,8 +81,8 @@
                 </ul>
             </div>
         </div>
-        <div id="footer" class="jsAccordion green">
-            <ul>
+        <div id="footer" class="jsAccordion">
+            <ul class="green">
                 <li><span>Section Heading</span>
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat justo nulla, et cursus urna. Morbi elit nisl, sodales a dignissim in, eleifend pretium ligula. Maecenas aliquet tortor vel orci faucibus posuere. Etiam dictum, turpis nec ultrices ullamcorper, massa nisl consequat lacus, ac blandit justo felis ac felis. Nulla vulputate imperdiet facilisis. Ut vel sodales mauris.</p>
