Update demo.html to use the new plugin

--- a/demo.html
+++ b/demo.html
@@ -12,49 +12,48 @@
         <script type="text/javascript" src="./scripts/modernizr.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="./scripts/accordion.js"></script>
-        <script type="text/javascript" src="./scripts/legacy.js"></script>
         <script type="text/javascript">
-            // There are several ways to specify which panels are open when the page loads
-            // visiblePanels = '-all'; // a value of '-all' makes all accordion panels visible
-            // visiblePanels = 'sub-fruits'; // you can set a specific id to be visible
-            // visiblePanels = [0,2,3]; // a numeric, zero-based index also works, and you can pass in multiple values as an array
-            visiblePanels = [0, 'sub-fruits']; // you can also mix and match, but that gets confusing
+            $(function () {
+                $('#nav').jsAccordion({
+                    accordionClass: 'secondary-nav',
+                    // the following option determins which sections will be opened when the page loads
+                    // you can use a jQuery object, a string selector, or an array containing objects or selectors
+                    openPanels: ['#sub-veg', $('#sub-fruits')]
+                });
+            });
         </script>
     </head>
     <body>
-        <!-- Accordions must have a parent element with the class "jsAccordion" to get their style and functionality -->
-        <div id="nav" class="jsAccordion">
-            <!-- Each accordion must be in the form of a 'ul' element -->
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><span>Vegetables: Leaves, Stalk, and Roots</span><!-- Ideally, section labels should be wrapped in <span> tags -->
-                    <ul id="sub-veg"><!-- The hidden section must be either a ul or div -->
-                        <li>Carrots</li>
-                        <li><a href="#">Broccoli</a></li>
-                        <li><a href="#">Celery</a></li>
-                        <li><a href="#">Spinach</a></li>
-                    </ul>
-                </li>
-                <li>Fruits <!-- If section labels aren't wrapped in anything, jQuery will wrap a <span> tag around them -->
-                    <ul id="sub-fruits">
-                        <li><a href="#">Oranges</a></li>
-                        <li><a href="#">Pears</a></li>
-                        <li><a href="#">Grapes</a></li>
-                        <li><a href="#">Berries (including Boysenberries and Strawberries)</a></li>
-                        <li><a href="#">Peaches</a></li>
-                        <li><a href="#">Grapefruits</a></li>
-                    </ul>
-                </li>
-                <li><a href="http://health.usf.edu/">Dairy</a></li>
-                <li><a href="#">Grains</a> <!-- Section labels can also be wrapped with <a> tags. -->
-                    <ul id="sub-grains">
-                        <li><a href="#">Wheat</a></li>
-                        <li><a href="#">Oats</a></li>
-                        <li><a href="#">Flaxseed</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+        <!-- Each accordion must be in the form of a 'ul' element -->
+        <ul id="nav">
+            <li><a href="#">Home</a></li>
+            <li><span>Vegetables: Leaves, Stalk, and Roots</span><!-- Ideally, section labels should be wrapped in <span> tags -->
+                <ul id="sub-veg"><!-- The hidden panel must be either a ul or div -->
+                    <li>Carrots</li>
+                    <li><a href="#">Broccoli</a></li>
+                    <li><a href="#">Celery</a></li>
+                    <li><a href="#">Spinach</a></li>
+                </ul>
+            </li>
+            <li>Fruits <!-- If section labels aren't wrapped in anything, a <span> tag will automatically be wrapped around them -->
+                <ul id="sub-fruits">
+                    <li><a href="#">Oranges</a></li>
+                    <li><a href="#">Pears</a></li>
+                    <li><a href="#">Grapes</a></li>
+                    <li><a href="#">Berries (including Boysenberries and Strawberries)</a></li>
+                    <li><a href="#">Peaches</a></li>
+                    <li><a href="#">Grapefruits</a></li>
+                </ul>
+            </li>
+            <li><a href="http://health.usf.edu/">Dairy</a></li>
+            <li><a href="#">Grains</a> <!-- Section labels can also be wrapped with <a> tags. -->
+                <ul id="sub-grains">
+                    <li><a href="#">Wheat</a></li>
+                    <li><a href="#">Oats</a></li>
+                    <li><a href="#">Flaxseed</a></li>
+                </ul>
+            </li>
+        </ul>
         
         <p id="description">View the source code of this document and <a href="./accordion.js">the corresponding JS file</a> for lots of inline documentation. To summarize, each accordion menu should be a &lt;ul&gt; contained within a parent that has the class "jsAccordion".  By default, all panels (containing sub-links) will be hidden, but each page can control which panels are open by default.</p>
     </body>
