--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
         <script type="text/javascript">
             $(function () {
                 $('#nav').jsAccordion({
-                    // the following option determins which sections will be opened when the page loads
+                    // the following option determines which sections will be opened when the page loads
                     // you can use a jQuery object, a string selector, or an array containing objects or selectors
                     openPanels: ['#sub-veg', $('#sub-fruits')]
                 });
