--- a/demo.html
+++ b/demo.html
@@ -8,6 +8,18 @@
         <style type="text/css">
             /* The accordion defaults to the width of its parent unless excplicitely set. */
             #nav {float: left; margin-right: 30px; width: 175px;}
+
+            /* We require support for an icon font for our chevron */
+            @font-face {
+                font-family: 'FontAwesome';
+                src:url('fonts/Icomoon.eot');
+                src:url('fonts/Icomoon.eot?#iefix') format('embedded-opentype'),
+                    url('fonts/Icomoon.ttf') format('truetype'),
+                    url('fonts/Icomoon.woff') format('woff'),
+                    url('fonts/Icomoon.svg#Icomoon') format('svg');
+                font-weight: normal;
+                font-style: normal;
+            }
         </style>
         <script type="text/javascript" src="./scripts/modernizr.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
